// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peer - Company Job Map Result should show a No Job Description message for the result, when there is none  1`] = `
<pf-company-job-map-result
  applyMapping={[Function EventEmitter]}
  clicked={[Function EventEmitter]}
  companyJobToMapTo={[Function Object]}
  jobDescriptionMaxLength={[Function Number]}
>
  <div
    class="company-job-to-map-to-result d-flex flex-column"
  >
    
  
    
    <div
      class="d-flex justify-content-between"
    >
      
  
      
      <div
        class="d-flex flex-column"
      >
        
        
        <strong>
          1001 - MockCompanyJob
        </strong>
        
  
        
        <div
          class="mt-2"
        >
          
  
          
          
          
            
          <em>
            No Job Description
          </em>
          
          
          
  
          
          
          
        
        </div>
        
  
      
      </div>
      
  
      
      <div
        class="apply-mapping-container"
      >
        
        
        <pf-apply-mapping-button>
          
        
        </pf-apply-mapping-button>
        
      
      </div>
      
    
    </div>
    
  
  
  </div>
  
</pf-company-job-map-result>
`;

exports[`Peer - Company Job Map Result should show a View less link, when we are showing the full job description 1`] = `
<pf-company-job-map-result
  applyMapping={[Function EventEmitter]}
  clicked={[Function EventEmitter]}
  companyJobToMapTo={[Function Object]}
  jobDescriptionMaxLength={[Function Number]}
  showFullJobDescription={[Function Boolean]}
>
  <div
    class="company-job-to-map-to-result d-flex flex-column"
  >
    
  
    
    <div
      class="d-flex justify-content-between"
    >
      
  
      
      <div
        class="d-flex flex-column"
      >
        
        
        <strong>
          1001 - MockCompanyJob
        </strong>
        
  
        
        <div
          class="mt-2"
        >
          
  
          
          
          
          
  
            
          
          
              Dummy Job Description
            
          
  
            
          
          
  
            
          
          <div
            class="toggle-jd-view-link"
          >
            
  
              View Less
  
            
          </div>
          
  
          
          
  
          
          
          
        
        </div>
        
  
      
      </div>
      
  
      
      <div
        class="apply-mapping-container"
      >
        
        
        <pf-apply-mapping-button>
          
        
        </pf-apply-mapping-button>
        
      
      </div>
      
    
    </div>
    
  
  
  </div>
  
</pf-company-job-map-result>
`;

exports[`Peer - Company Job Map Result should show a ellipsis after the Job Description, when the job description exceeds the max length 1`] = `
<pf-company-job-map-result
  applyMapping={[Function EventEmitter]}
  clicked={[Function EventEmitter]}
  companyJobToMapTo={[Function Object]}
  jobDescriptionMaxLength={[Function Number]}
>
  <div
    class="company-job-to-map-to-result d-flex flex-column"
  >
    
  
    
    <div
      class="d-flex justify-content-between"
    >
      
  
      
      <div
        class="d-flex flex-column"
      >
        
        
        <strong>
          1001 - MockCompanyJob
        </strong>
        
  
        
        <div
          class="mt-2"
        >
          
  
          
          
          
          
  
            
          
          
          
              Dummy Job Des...
            
          
  
            
          
          
  
            
          
          <div
            class="toggle-jd-view-link"
          >
            
  
              View More
  
            
          </div>
          
  
          
          
  
          
          
          
        
        </div>
        
  
      
      </div>
      
  
      
      <div
        class="apply-mapping-container"
      >
        
        
        <pf-apply-mapping-button>
          
        
        </pf-apply-mapping-button>
        
      
      </div>
      
    
    </div>
    
  
  
  </div>
  
</pf-company-job-map-result>
`;

exports[`Peer - Company Job Map Result should show the full Job Description, when the job description is less than the max length 1`] = `
<pf-company-job-map-result
  applyMapping={[Function EventEmitter]}
  clicked={[Function EventEmitter]}
  companyJobToMapTo={[Function Object]}
  jobDescriptionMaxLength={[Function Number]}
>
  <div
    class="company-job-to-map-to-result d-flex flex-column"
  >
    
  
    
    <div
      class="d-flex justify-content-between"
    >
      
  
      
      <div
        class="d-flex flex-column"
      >
        
        
        <strong>
          1001 - MockCompanyJob
        </strong>
        
  
        
        <div
          class="mt-2"
        >
          
  
          
          
          
          
  
            
          
          
              Dummy Job Description
            
          
  
            
          
          
  
            
          
          
  
          
          
  
          
          
          
        
        </div>
        
  
      
      </div>
      
  
      
      <div
        class="apply-mapping-container"
      >
        
        
        <pf-apply-mapping-button>
          
        
        </pf-apply-mapping-button>
        
      
      </div>
      
    
    </div>
    
  
  
  </div>
  
</pf-company-job-map-result>
`;
